Add readers to ArticleInfo flyout
I have implemented new store to get the readers of the page.
This implementation is very basic ATM, just what is needed for the
flyout, but should be extended in the future to replace old API stores

Change-Id: I18137f77b4438bcd420a740648ed59b2344ea4af
ERM: #9944

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -21,5 +21,7 @@
 	"apihelp-bs-readers-data-store-description": "Get reader info of specific page.",
 	"apihelp-bs-readers-data-store-summary": "Get reader info of specific page.",
 	"apihelp-bs-readers-users-store-description": "Get all readers info of specific page.",
-	"apihelp-bs-readers-users-store-summary": "Get all readers info of specific page."
+	"apihelp-bs-readers-users-store-summary": "Get all readers info of specific page.",
+	"apihelp-bs-readers-page-readers-store-summary": "Gets all readers of all pages",
+	"bs-readers-flyout-title": "Readers of this page"
 }
