--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -25,5 +25,7 @@
 	"apihelp-bs-readers-data-store-description": "{{doc-apihelp-description|bs-readers-data-store}}",
 	"apihelp-bs-readers-data-store-summary": "{{doc-apihelp-summary|bs-readers-data-store}}",
 	"apihelp-bs-readers-users-store-description": "{{doc-apihelp-description|bs-readers-users-store}}",
-	"apihelp-bs-readers-users-store-summary": "{{doc-apihelp-summary|bs-readers-users-store}}"
+	"apihelp-bs-readers-users-store-summary": "{{doc-apihelp-summary|bs-readers-users-store}}",
+	"apihelp-bs-readers-page-readers-store-summary": "{{doc-apihelp-summary|bs-readers-page-readers-store}}",
+	"bs-readers-flyout-title": "Title of the panel showing readers of a page"
 }
