--- a/i18n/en.json
+++ b/i18n/en.json
@@ -23,5 +23,6 @@
 	"apihelp-bs-readers-users-store-description": "Get all readers info of specific page.",
 	"apihelp-bs-readers-users-store-summary": "Get all readers info of specific page.",
 	"apihelp-bs-readers-page-readers-store-summary": "Gets all readers of all pages",
+	"action-viewreaders": "view the readers of pages",
 	"bs-readers-flyout-title": "Readers of this page"
 }
