--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -27,5 +27,6 @@
 	"apihelp-bs-readers-users-store-description": "{{doc-apihelp-description|bs-readers-users-store}}",
 	"apihelp-bs-readers-users-store-summary": "{{doc-apihelp-summary|bs-readers-users-store}}",
 	"apihelp-bs-readers-page-readers-store-summary": "{{doc-apihelp-summary|bs-readers-page-readers-store}}",
+	"action-viewreaders": "label for denied special page\n{{doc-action|viewreaders}}",
 	"bs-readers-flyout-title": "Title of the panel showing readers of a page"
 }
