Add permission message
Change-Id: Ib3304e350493a94dbcdde69720eb4f6d01ae91c7

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -28,5 +28,6 @@
 	"apihelp-bs-readers-users-store-summary": "{{doc-apihelp-summary|bs-readers-users-store}}",
 	"apihelp-bs-readers-page-readers-store-summary": "{{doc-apihelp-summary|bs-readers-page-readers-store}}",
 	"action-viewreaders": "label for denied special page\n{{doc-action|viewreaders}}",
-	"bs-readers-flyout-title": "Title of the panel showing readers of a page"
+	"bs-readers-flyout-title": "Title of the panel showing readers of a page",
+	"right-viewreaders": "Description of viewreaders right"
 }
