--- a/i18n/en.json
+++ b/i18n/en.json
@@ -24,5 +24,6 @@
 	"apihelp-bs-readers-users-store-summary": "Get all readers info of specific page.",
 	"apihelp-bs-readers-page-readers-store-summary": "Gets all readers of all pages",
 	"action-viewreaders": "view the readers of pages",
-	"bs-readers-flyout-title": "Readers of this page"
+	"bs-readers-flyout-title": "Readers of this page",
+	"right-viewreaders": "Allows viewing readers of a page"
 }
