--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -29,5 +29,6 @@
 	"apihelp-bs-readers-page-readers-store-summary": "{{doc-apihelp-summary|bs-readers-page-readers-store}}",
 	"action-viewreaders": "label for denied special page\n{{doc-action|viewreaders}}",
 	"bs-readers-flyout-title": "Title of the panel showing readers of a page",
-	"right-viewreaders": "{{doc-right|viewreaders}}"
+	"right-viewreaders": "{{doc-right|viewreaders}}",
+	"bs-readers-privacy-transparency-working-readers": "Message for item in BlueSpicePrivacy when exporting user reader data. $1 - Page prefixed title, $2 - Read timestamp"
 }
