Sync I18N from master
Change-Id: I233dd8a69eec35bffd162fa7dd7eb2a419e0619c

--- a/i18n/ne.json
+++ b/i18n/ne.json
@@ -1,8 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
-			"Nirajan pant"
+			"Nirajan pant",
+			"हिमाल सुबेदी"
 		]
 	},
-	"action-viewreaders": "पृष्ठहरूका पाठकहरू हेर्नुहोस्"
+	"action-viewreaders": "पृष्ठहरूका पाठकहरू हेर्नुहोस्",
+	"bs-readers-header-page": "पृष्ठ"
 }
