Sync I18N from master

--- a/i18n/io.json
+++ b/i18n/io.json
@@ -4,5 +4,6 @@
 			"Joao Xavier"
 		]
 	},
-	"bs-readers-header-page": "Pagino"
+	"bs-readers-header-page": "Pagino",
+	"bs-readers-header-username": "Uzeronomo"
 }
