--- a/i18n/nb.json
+++ b/i18n/nb.json
@@ -1,9 +1,9 @@
 {
 	"@metadata": {
 		"authors": [
-			"Tarjeimo",
+			"Jon Harald Søby",
 			"Orf3us",
-			"Jon Harald Søby"
+			"Tarjeimo"
 		]
 	},
 	"bs-readers-header-page": "Side",
