Sync I18N from master

--- a/i18n/nah.json
+++ b/i18n/nah.json
@@ -1,8 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
+			"Akapochtli",
 			"Taresi"
 		]
 	},
-	"bs-readers-header-page": "Tlaīxtli"
+	"bs-readers-header-page": "Tlahcuilolamatl",
+	"bs-readers-header-username": "Tequitiuhcatocaitl"
 }
