--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,6 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
+			"Elliot",
 			"Metalhead64",
 			"Stephan Muggli <muggli@hallowelt.biz>"
 		]
@@ -27,5 +28,9 @@
 	"action-viewreaders": "die Leser von Seiten anzusehen",
 	"bs-readers-flyout-title": "Leser dieser Seite",
 	"right-viewreaders": "Die Leser einer Seite ansehen",
-	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders – {{GENDER:$3|Du}} hast die Seite $1 am $2 gelesen"
+	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders – {{GENDER:$3|Du}} hast die Seite $1 am $2 gelesen",
+	"apihelp-bs-readers-tasks-summary": "Ermöglicht häufig vorkommende Arbeitsvorgänge für Leser",
+	"action-viewrevisionreaders": "Sieh die Leser von Überarbeitungen einzelner Seiten",
+	"right-viewrevisionreaders": "Sieh die Leser von Überarbeitungen einzelner Seiten",
+	"bs-readers-flyout-header-read-by": "Gelesen von"
 }
