--- a/i18n/it.json
+++ b/i18n/it.json
@@ -20,5 +20,9 @@
 	"bs-readers-header-readerspath": "Lettore",
 	"bs-readers-header-ts": "Data",
 	"bs-readers-header-page": "Pagina",
-	"right-viewreaders": "Visualizza i lettori di una pagina"
+	"right-viewreaders": "Visualizza i lettori di una pagina",
+	"bs-readers-flyout-header-read-by": "Letto da",
+	"bs-readers-flyout-header-revision-id": "ID versione",
+	"bs-readers-flyout-header-revision-date": "Data versione",
+	"bs-readers-flyout-header-read-on": "Letto il"
 }
