Sync I18N from master

--- a/i18n/da.json
+++ b/i18n/da.json
@@ -10,5 +10,9 @@
 	"bs-readers-header-username": "Brugernavn",
 	"bs-readers-header-readerspath": "Læser",
 	"bs-readers-header-ts": "Dato",
-	"bs-readers-header-page": "Side"
+	"bs-readers-header-page": "Side",
+	"bs-readers-flyout-title": "Læsere af denne side",
+	"right-viewreaders": "Vis læsere af en side",
+	"bs-readers-flyout-header-read-by": "Læst af",
+	"bs-readers-flyout-header-read-on": "Læst den"
 }
