--- a/i18n/sv.json
+++ b/i18n/sv.json
@@ -1,9 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
-			"WikiPhoenix",
+			"Josve05a",
 			"Lokal Profil",
-			"Josve05a"
+			"Sabelöga",
+			"WikiPhoenix"
 		]
 	},
 	"bs-readers-desc": "Skapar en lista över de personer som läser en sida",
@@ -25,5 +26,10 @@
 	"apihelp-bs-readers-page-readers-store-summary": "Hämtar alla läsare för alla sidor",
 	"action-viewreaders": "visa sidans läsare",
 	"bs-readers-flyout-title": "Läsare för denna sida",
-	"right-viewreaders": "Visa en sidas läsare"
+	"right-viewreaders": "Visa en sidas läsare",
+	"bs-readers-flyout-header-read-by": "Läst av",
+	"bs-readers-flyout-header-revision-id": "Sidversions-ID",
+	"bs-readers-flyout-header-revision-date": "Sidversionsdatum",
+	"bs-readers-flyout-header-read-on": "Läs på",
+	"revisionreaders": "Läsare efter sidversion av \"$1\""
 }
