--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -1,10 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
-			"Ата",
 			"Andriykopanytsia",
 			"Dars",
-			"Piramidion"
+			"Piramidion",
+			"Ата"
 		]
 	},
 	"bs-readers-desc": "Створює список людей, які читають сторінку",
@@ -28,6 +28,6 @@
 	"apihelp-bs-readers-page-readers-store-summary": "Отримує всіх читачів усіх сторінок",
 	"action-viewreaders": "перегляд читачів сторінок",
 	"bs-readers-flyout-title": "Читачі цієї сторінки",
-	"right-viewreaders": "перегляд читачів сторінки",
+	"right-viewreaders": "Перегляд читачів сторінки",
 	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders — {{GENDER:$3|Ви}} читали сторінку $1 станом на $2"
 }
