--- a/i18n/zh-hant.json
+++ b/i18n/zh-hant.json
@@ -1,13 +1,13 @@
 {
 	"@metadata": {
 		"authors": [
-			"Liuxinyu970226",
-			"Cwlin0416",
-			"LNDDYL",
-			"Corainn",
-			"Sanmosa",
-			"Kly",
 			"A2093064",
+			"Corainn",
+			"Cwlin0416",
+			"Kly",
+			"LNDDYL",
+			"Liuxinyu970226",
+			"Sanmosa",
 			"Willy1018",
 			"Xiplus"
 		]
@@ -34,5 +34,15 @@
 	"action-viewreaders": "檢視頁面讀者",
 	"bs-readers-flyout-title": "此頁面讀者",
 	"right-viewreaders": "檢視頁面的讀者",
-	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders - {{GENDER:$3|您}}已閱讀頁面$1於$2"
+	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders - {{GENDER:$3|您}}已閱讀頁面$1於$2",
+	"apihelp-bs-readers-revision-readers-store-summary": "取得一個頁面所有修訂的全部讀者",
+	"apihelp-bs-readers-tasks-summary": "提供適用於讀者的通用操作",
+	"action-viewrevisionreaders": "檢視單一頁面修訂的讀者",
+	"right-viewrevisionreaders": "檢視單一頁面修訂的讀者",
+	"bs-readers-flyout-header-read-by": "閱讀由",
+	"bs-readers-flyout-header-revision-id": "修訂 ID",
+	"bs-readers-flyout-header-revision-date": "修訂日期",
+	"bs-readers-flyout-header-read-on": "閱讀於",
+	"bs-readers-revision-flyout-title": "各修訂的讀者",
+	"revisionreaders": "「$1」修訂的讀者"
 }
