--- a/i18n/el.json
+++ b/i18n/el.json
@@ -1,9 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
-			"Nikosgranturismogt",
+			"Geraki",
 			"KATRINE1993",
-			"Geraki"
+			"NikosLikomitros",
+			"Nikosgranturismogt"
 		]
 	},
 	"bs-readers-desc": "Δημιουργεί μια λίστα ανθρώπων που διαβάζουν μια σελίδα",
