--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -1,12 +1,12 @@
 {
 	"@metadata": {
 		"authors": [
+			"Alacabe",
 			"Gomoko",
 			"Ltrlg",
 			"Macofe",
-			"Wladek92",
-			"Alacabe",
-			"Thibaut120094"
+			"Thibaut120094",
+			"Wladek92"
 		]
 	},
 	"bs-readers-desc": "Crée une liste des lecteurs d’une page",
@@ -31,5 +31,15 @@
 	"action-viewreaders": "afficher les lecteurs des pages",
 	"bs-readers-flyout-title": "Lecteurs de cette page",
 	"right-viewreaders": "Afficher les lecteurs d’une page",
-	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders - {{GENDER:$3|Vous}} lisez la page $1 sur $2"
+	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders - {{GENDER:$3|Vous}} lisez la page $1 sur $2",
+	"apihelp-bs-readers-revision-readers-store-summary": "Obtient tous les lecteurs de toutes les révisions d’une page",
+	"apihelp-bs-readers-tasks-summary": "Fournit les opérations courantes pour les lecteurs",
+	"action-viewrevisionreaders": "afficher les lecteurs des révisions d’une seule page",
+	"right-viewrevisionreaders": "Afficher les lecteurs des révisions d’une seule page",
+	"bs-readers-flyout-header-read-by": "Lu par",
+	"bs-readers-flyout-header-revision-id": "ID de révision",
+	"bs-readers-flyout-header-revision-date": "Date de révision",
+	"bs-readers-flyout-header-read-on": "Lu le",
+	"bs-readers-revision-flyout-title": "Lecteurs par révision",
+	"revisionreaders": "Lecteurs par révision de « $1 »"
 }
