--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -1,11 +1,12 @@
 {
 	"@metadata": {
 		"authors": [
-			"Violetanka",
-			"KorkmazO",
-			"Sadrettin",
 			"1917 Ekim Devrimi",
-			"BaRaN6161 TURK"
+			"BaRaN6161 TURK",
+			"KorkmazO",
+			"MuratTheTurkish",
+			"Sadrettin",
+			"Violetanka"
 		]
 	},
 	"bs-readers-desc": "Bir sayfayı okuyan insanların listesini oluşturur",
@@ -30,5 +31,15 @@
 	"action-viewreaders": "sayfaların okuyucularını görüntüle",
 	"bs-readers-flyout-title": "Bu sayfanın okuyucuları",
 	"right-viewreaders": "Sayfanın okuyucularını görüntüle",
-	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders - {{GENDER:$3|Siz}} $1 sayfasını $2 üzerinde okudunuz"
+	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders - {{GENDER:$3|Siz}} $1 sayfasını $2 üzerinde okudunuz",
+	"apihelp-bs-readers-revision-readers-store-summary": "Bir sayfanın tüm revizyonlarının tüm okuyucularını alır",
+	"apihelp-bs-readers-tasks-summary": "Okuyucular için ortak işlemler sağlar",
+	"action-viewrevisionreaders": "tek sayfalık revizyonların okuyucularını görüntüle",
+	"right-viewrevisionreaders": "Tek sayfalık revizyonların okuyucularını görüntüle",
+	"bs-readers-flyout-header-read-by": "Okuyan",
+	"bs-readers-flyout-header-revision-id": "Revizyon kimliği",
+	"bs-readers-flyout-header-revision-date": "Revizyon tarihi",
+	"bs-readers-flyout-header-read-on": "Şunu üzerine oku",
+	"bs-readers-revision-flyout-title": "Revizyona göre okuyucular",
+	"revisionreaders": "\"$1\" revizyonuna göre okuyucular"
 }
