--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -1,9 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
-			"Liuxinyu970226",
-			"Cosine02",
 			"A Chinese Wikipedian",
+			"Cosine02",
+			"Liuxinyu970226",
+			"SkEy",
 			"佛壁灯"
 		]
 	},
@@ -29,5 +30,12 @@
 	"action-viewreaders": "查看页面的读者们",
 	"bs-readers-flyout-title": "此页面的阅读者",
 	"right-viewreaders": "查看页面的读者",
-	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders读者 - {{GENDER:$3|您}}在$2阅读了页面$1"
+	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders读者 - {{GENDER:$3|您}}在$2阅读了页面$1",
+	"apihelp-bs-readers-revision-readers-store-summary": "获取一个页面所有修订版本的全部读者",
+	"right-viewrevisionreaders": "查看一个页面修订版本的读者",
+	"bs-readers-flyout-header-read-by": "阅读者",
+	"bs-readers-flyout-header-revision-id": "修订版本ID",
+	"bs-readers-flyout-header-revision-date": "修订版本日期",
+	"bs-readers-revision-flyout-title": "各个修订版本的读者",
+	"revisionreaders": "“$1”各个版本的读者"
 }
