--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -6,40 +6,41 @@
 			"Ltrlg",
 			"Macofe",
 			"Thibaut120094",
+			"Verdy p",
 			"Wladek92"
 		]
 	},
 	"bs-readers-desc": "Crée une liste des lecteurs d’une page",
 	"prefs-readers": "Lecteurs",
-	"bs-readers-title": "{{PLURAL:$1|{{GENDER:$2|Lecteur|Lectrice}}|Lecteurs}}",
-	"readers-user": "Pages {{GENDER:$1|lues}} par : $1",
-	"readers": "Lecteurs de « $1 »",
+	"bs-readers-title": "Lect{{PLURAL:$1|{{GENDER:$2|eur|rice}}|eurs}}",
+	"readers-user": "Pages lues par : $1{{GENDER:$1|}}",
+	"readers": "Lecteurs de « $1 »",
 	"bs-readers-contentactions-label": "Afficher les lecteurs",
 	"bs-readers-pagenotexists": "La page n’existe pas.",
-	"bs-readers-pref-active": "Lecteurs actifs",
-	"bs-readers-pref-numofreaders": "Nombre de lecteurs à afficher :",
+	"bs-readers-pref-active": "Activer les lecteurs",
+	"bs-readers-pref-numofreaders": "Nombre de lecteurs à afficher :",
 	"bs-readers-emptyinput": "Aucune page n’a été fournie.",
 	"bs-readers-header-username": "Nom d’utilisateur",
 	"bs-readers-header-readerspath": "Lecteur",
 	"bs-readers-header-ts": "Date",
 	"bs-readers-header-page": "Page",
-	"apihelp-bs-readers-data-store-description": "Obtenir le informations concernant le lecteur de la page spécifique.",
-	"apihelp-bs-readers-data-store-summary": "Fournit les informations utilisateur d’une page donnée.",
-	"apihelp-bs-readers-users-store-description": "Obtenir les informations sur tous les lecteurs de la page spécifique.",
-	"apihelp-bs-readers-users-store-summary": "Obtenir toutes les informations des lecteurs d’une page spécifique.",
-	"apihelp-bs-readers-page-readers-store-summary": "Obtenir tous les lecteurs de toutes le pages",
+	"apihelp-bs-readers-data-store-description": "Obtenir les informations concernant les lecteurs d’une page spécifique.",
+	"apihelp-bs-readers-data-store-summary": "Fournit les informations concernant les lecteurs d’une page spécifique.",
+	"apihelp-bs-readers-users-store-description": "Obtenir toutes les informations concernant les lecteurs d’une page spécifique.",
+	"apihelp-bs-readers-users-store-summary": "Obtenir toutes les informations concernant les lecteurs d’une page spécifique.",
+	"apihelp-bs-readers-page-readers-store-summary": "Obtient toutes les informations concernant les lecteurs de toutes les pages",
 	"action-viewreaders": "afficher les lecteurs des pages",
 	"bs-readers-flyout-title": "Lecteurs de cette page",
 	"right-viewreaders": "Afficher les lecteurs d’une page",
-	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders - {{GENDER:$3|Vous}} lisez la page $1 sur $2",
-	"apihelp-bs-readers-revision-readers-store-summary": "Obtient tous les lecteurs de toutes les révisions d’une page",
+	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders – {{GENDER:$3|}}Vous lisez la page $1 sur $2",
+	"apihelp-bs-readers-revision-readers-store-summary": "Obtient toutes les informations concernant les lecteurs de toutes les versions d’une page",
 	"apihelp-bs-readers-tasks-summary": "Fournit les opérations courantes pour les lecteurs",
-	"action-viewrevisionreaders": "afficher les lecteurs des révisions d’une seule page",
-	"right-viewrevisionreaders": "Afficher les lecteurs des révisions d’une seule page",
+	"action-viewrevisionreaders": "afficher les lecteurs des versions d’une seule page",
+	"right-viewrevisionreaders": "Afficher les lecteurs des versions d’une seule page",
 	"bs-readers-flyout-header-read-by": "Lu par",
 	"bs-readers-flyout-header-revision-id": "ID de révision",
-	"bs-readers-flyout-header-revision-date": "Date de révision",
+	"bs-readers-flyout-header-revision-date": "Date de version",
 	"bs-readers-flyout-header-read-on": "Lu le",
-	"bs-readers-revision-flyout-title": "Lecteurs par révision",
-	"revisionreaders": "Lecteurs par révision de « $1 »"
+	"bs-readers-revision-flyout-title": "Lecteurs par version",
+	"revisionreaders": "Lecteurs par version de « $1 »"
 }
