Add translations for ConfigManager integration
[3.2.x]

ERM9662

Change-Id: Ia25f4cdda20ad8007940cd6847dbc8ab43c59782

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -36,5 +36,6 @@
 	"bs-readers-flyout-header-revision-date": "Revision date",
 	"bs-readers-flyout-header-read-on": "Read on",
 	"bs-readers-revision-flyout-title": "Readers by revision",
-	"revisionreaders": "Readers by revision of \"$1\""
+	"revisionreaders": "Readers by revision of \"$1\"",
+	"bs-readers-pref-numofreaders-help": "Number of readers that is displayed on the page information in the quality management tools."
 }
