--- a/i18n/de.json
+++ b/i18n/de.json
@@ -40,5 +40,6 @@
 	"bs-readers-flyout-header-revision-date": "Versionsdatum",
 	"bs-readers-flyout-header-read-on": "Gelesen am",
 	"bs-readers-revision-flyout-title": "Leser je Version",
-	"revisionreaders": "Leser je Version für Artikel „$1“"
+	"revisionreaders": "Leser je Version für Artikel „$1“",
+	"bs-readers-pref-numofreaders-help": "Anzahl der Leser, die in den Seiteninformationen der Qualitätsmanagement-Werkzeuge angezeigt wird."
 }
