--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -37,5 +37,6 @@
 	"right-viewreaders": "Toon lezers van een pagina",
 	"bs-readers-flyout-header-revision-date": "Revisiedatum",
 	"bs-readers-revision-flyout-title": "Lezers per revisie",
-	"revisionreaders": "Lezers per revisie van \"$1\""
+	"revisionreaders": "Lezers per revisie van \"$1\"",
+	"bs-readers-flyout-header-revision-id": "Versienummer"
 }
