--- a/i18n/de.json
+++ b/i18n/de.json
@@ -41,5 +41,6 @@
 	"bs-readers-flyout-header-read-on": "Gelesen am",
 	"bs-readers-revision-flyout-title": "Leser je Version",
 	"revisionreaders": "Leser je Version für Artikel „$1“",
-	"bs-readers-pref-numofreaders-help": "Anzahl der Leser, die in den Seiteninformationen der Qualitätsmanagement-Werkzeuge angezeigt wird."
+	"bs-readers-pref-numofreaders-help": "Anzahl der Leser, die in den Seiteninformationen der Qualitätsmanagement-Werkzeuge angezeigt wird.",
+	"bs-readers-info-dialog": "Leser dieser Seite"
 }
