--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -41,5 +41,6 @@
 	"bs-readers-flyout-header-read-on": "Headline for 'Read on' column, used in readers flyout",
 	"bs-readers-revision-flyout-title": "Title of the panel showing the readers of each revision",
 	"revisionreaders": "Special page title of RevisionReaders for reader by revision of \"$1\"\n*$1 the page name",
-	"bs-readers-pref-numofreaders-help": "Description for config variable \"ReadersNumOfReaders\""
+	"bs-readers-pref-numofreaders-help": "Description for config variable \"ReadersNumOfReaders\"",
+	"bs-readers-info-dialog": "Label for page information dialog"
 }
