Sync I18N from master

--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -3,11 +3,11 @@
 		"authors": [
 			"1917 Ekim Devrimi",
 			"BaRaN6161 TURK",
+			"Can",
 			"KorkmazO",
 			"MuratTheTurkish",
 			"Sadrettin",
-			"Violetanka",
-			"Can"
+			"Violetanka"
 		]
 	},
 	"bs-readers-desc": "Bir sayfayı okuyan insanların listesini oluşturur",
