Sync I18N from master

--- a/i18n/nah.json
+++ b/i18n/nah.json
@@ -2,9 +2,10 @@
 	"@metadata": {
 		"authors": [
 			"Akapochtli",
+			"Languaeditor",
 			"Taresi"
 		]
 	},
-	"bs-readers-header-page": "Tlahcuilolamatl",
+	"bs-readers-header-page": "Tlahkwilolamatl",
 	"bs-readers-header-username": "Tequitiuhcatocaitl"
 }
