--- a/i18n/nah.json
+++ b/i18n/nah.json
@@ -2,8 +2,8 @@
 	"@metadata": {
 		"authors": [
 			"Akapochtli",
-			"Taresi",
-			"Languaeditor"
+			"Languaeditor",
+			"Taresi"
 		]
 	},
 	"bs-readers-header-username": "Tequitiuhcatocaitl",
