Sync I18N from master

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -4,6 +4,7 @@
 			"AVIADOR",
 			"Alberrg",
 			"Astroemi",
+			"DiegoAmbrocio",
 			"Fitoschido",
 			"Jakeukalane",
 			"Macofe"
@@ -25,5 +26,18 @@
 	"bs-readers-header-page": "Página",
 	"action-viewreaders": "ver los lectores de páginas",
 	"bs-readers-flyout-title": "Lectores de esta página",
-	"bs-readers-info-dialog": "Lectores de esta página"
+	"bs-readers-info-dialog": "Lectores de esta página",
+	"apihelp-bs-readers-data-store-description": "Obtener información del lector de una página específica.",
+	"apihelp-bs-readers-data-store-summary": "Obtener información del lector de una página específica.",
+	"apihelp-bs-readers-tasks-summary": "Proporciona operaciones comunes para los lectores",
+	"action-viewrevisionreaders": "ver los lectores de las revisiones de una sola página",
+	"right-viewreaders": "Ver los lectores de una página",
+	"right-viewrevisionreaders": "Ver los lectores de las revisiones de una sola página",
+	"bs-readers-flyout-header-read-by": "Leído por",
+	"bs-readers-flyout-header-revision-id": "Identificación de la revisión",
+	"bs-readers-flyout-header-revision-date": "Fecha de revisión",
+	"bs-readers-flyout-header-read-on": "Leída el",
+	"bs-readers-revision-flyout-title": "Lectores por revisión",
+	"revisionreaders": "Lectores por revisión $1",
+	"bs-readers-pref-numofreaders-help": "Número de lectores que aparece en la información de la página en las herramientas de gestión de la calidad."
 }
