Sync I18N from master

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -4,10 +4,10 @@
 			"AVIADOR",
 			"Alberrg",
 			"Astroemi",
+			"DiegoAmbrocio",
 			"Fitoschido",
 			"Jakeukalane",
-			"Macofe",
-			"DiegoAmbrocio"
+			"Macofe"
 		]
 	},
 	"bs-readers-desc": "Crea una lista de las personas que leen una página",
