--- a/i18n/fa.json
+++ b/i18n/fa.json
@@ -2,13 +2,13 @@
 	"@metadata": {
 		"authors": [
 			"Alirezaaa",
+			"Beginneruser",
 			"Ebraminio",
 			"FarsiNevis",
 			"Huji",
 			"Jeeputer",
 			"Reza1615",
-			"Sunfyre",
-			"Beginneruser"
+			"Sunfyre"
 		]
 	},
 	"bs-readers-desc": "فهرستی از کاربرانی که یک صفحه را خوانده‌اند می‌سازد",
