--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -1,10 +1,11 @@
 {
 	"@metadata": {
 		"authors": [
+			"FiberAhmed",
 			"Meno25",
+			"أَحمد",
 			"ديفيد",
-			"محمد أحمد عبد الفتاح",
-			"FiberAhmed"
+			"محمد أحمد عبد الفتاح"
 		]
 	},
 	"bs-readers-desc": "ينشئ قائمة بالأشخاص الذين يقرؤون صفحة",
