[WCAG] - Switch to OOJS in page info
ERM38718

[4.5.x]

Change-Id: I2042b3dc8190ceef9cb4f288bb501d2c07be5b54
(cherry picked from commit 1262bb3ac15faf87314b39c80f867f8726e764ff)

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -39,5 +39,6 @@
 	"bs-readers-revision-flyout-title": "Leser je Version",
 	"revisionreaders": "Leser je Version für Artikel „$1“",
 	"bs-readers-pref-numofreaders-help": "Anzahl der Leser, die in den Seiteninformationen der Qualitätsmanagement-Werkzeuge angezeigt wird.",
-	"bs-readers-info-dialog": "Leser dieser Seite"
+	"bs-readers-info-dialog": "Leser dieser Seite",
+	"bs-readers-info-dialog-column-readers": "Leser"
 }
