--- a/i18n/en.json
+++ b/i18n/en.json
@@ -35,5 +35,6 @@
 	"bs-readers-revision-flyout-title": "Readers by revision",
 	"revisionreaders": "Readers by revision of \"$1\"",
 	"bs-readers-pref-numofreaders-help": "Number of readers that is displayed on the page information in the quality management tools.",
-	"bs-readers-info-dialog": "Readers of this page"
+	"bs-readers-info-dialog": "Readers of this page",
+	"bs-readers-info-dialog-column-readers": "Readers"
 }
