--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -17,7 +17,6 @@
 	"bs-readers-contentactions-label": "Anchor text for display readers\n{{Identical|Display readers}}",
 	"bs-readers-pagenotexists": "Error text on special page for page does not exist.",
 	"bs-readers-pref-active": "Option in [[Special:Wiki_Admin&mode=Preferences]], checkbox label for activate readers",
-	"bs-readers-pref-numofreaders": "Option in [[Special:Wiki_Admin&mode=Preferences]], label for number of readers to display:",
 	"bs-readers-emptyinput": "Error text on special page for no page has been provided.",
 	"bs-readers-header-username": "Column headline for username\n{{Identical|Username}}",
 	"bs-readers-header-readerspath": "Used on special page, headline for reader\n{{Identical|Reader}}",
@@ -33,13 +32,12 @@
 	"right-viewreaders": "{{doc-right|viewreaders}}",
 	"right-viewrevisionreaders": "{{doc-right|viewrevisionreaders}}",
 	"bs-readers-privacy-transparency-working-readers": "Message for item in BlueSpicePrivacy when exporting user reader data.\n* $1 - Page prefixed title\n* $2 - Read timestamp",
-	"bs-readers-flyout-header-read-by": "Headline for 'Read by' column, used in readers flyout",
-	"bs-readers-flyout-header-revision-id": "Headline for 'Revision ID' column, used in readers flyout",
-	"bs-readers-flyout-header-revision-date": "Headline for 'Revision date' column, used in readers flyout",
-	"bs-readers-flyout-header-read-on": "Headline for 'Read on' column, used in readers flyout",
-	"bs-readers-revision-flyout-title": "Title of the panel showing the readers of each revision",
+	"bs-readers-header-read-by": "Headline for 'Read by' column",
+	"bs-readers-header-revision-id": "Headline for 'Revision ID' column",
+	"bs-readers-header-revision-date": "Headline for 'Revision date' column",
+	"bs-readers-header-read-on": "Headline for 'Read on' column",
 	"revisionreaders": "Special page title of RevisionReaders for reader by revision of \"$1\"\n*$1 the page name",
-	"bs-readers-pref-numofreaders-help": "Description for config variable \"ReadersNumOfReaders\"",
 	"bs-readers-info-dialog": "Label for page information dialog",
-	"bs-readers-info-dialog-column-readers": "Label for column which lists username of readers"
+	"bs-readers-info-dialog-column-readers": "Label for column which lists username of readers",
+	"bs-readers-permission-error": "Used as title of error message.\n{{Identical|Permission error}}"
 }
