Sync I18N from master

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -2,11 +2,11 @@
 	"@metadata": {
 		"authors": [
 			"Elliot",
+			"Justman10000",
 			"Metalhead64",
 			"Mglaser",
 			"Stephan Muggli <muggli@hallowelt.biz>",
-			"Umherirrender",
-			"Justman10000"
+			"Umherirrender"
 		]
 	},
 	"bs-readers-desc": "Erstellt eine Liste mit Personen, die eine Seite lesen",
