--- a/i18n/de.json
+++ b/i18n/de.json
@@ -18,7 +18,7 @@
 	"bs-readers-pagenotexists": "Es wurde keine Seite übergeben.",
 	"bs-readers-pref-active": "Besucher dieser Seite aktivieren.",
 	"bs-readers-pref-numofreaders": "Anzahl der anzuzeigenden Besucher:",
-	"bs-readers-emptyinput": "Du musste einen Seite angeben.",
+	"bs-readers-emptyinput": "{{#FORMAL:Du musste|Sie müssen}} einen Seite angeben.",
 	"bs-readers-header-username": "Benutzername",
 	"bs-readers-header-readerspath": "Leser",
 	"bs-readers-header-ts": "Datum",
@@ -35,7 +35,7 @@
 	"bs-readers-flyout-title": "Leser dieser Seite",
 	"right-viewreaders": "Die Leser einer Seite ansehen",
 	"right-viewrevisionreaders": "Sieh die Leser von Überarbeitungen einzelner Seiten",
-	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders – {{GENDER:$3|Du}} hast die Seite $1 am $2 gelesen",
+	"bs-readers-privacy-transparency-working-readers": "BlueSpiceReaders – {{#FORMAL:{{GENDER:$3|Du}} hast|Sie haben}} die Seite $1 am $2 gelesen",
 	"bs-readers-flyout-header-read-by": "Gelesen von",
 	"bs-readers-flyout-header-revision-id": "Versions-ID",
 	"bs-readers-flyout-header-revision-date": "Versionsdatum",
