Sync I18N from master

--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -3,8 +3,8 @@
 		"authors": [
 			"Hamilton Abreu",
 			"Macofe",
-			"Vitorvicentevalente",
-			"Mansil alfalb"
+			"Mansil alfalb",
+			"Vitorvicentevalente"
 		]
 	},
 	"bs-readers-desc": "Cria uma lista das pessoas que leem uma página",
