Sync I18N from master

--- a/i18n/pa.json
+++ b/i18n/pa.json
@@ -4,5 +4,6 @@
 			"Cabal"
 		]
 	},
-	"bs-readers-permission-error": "ਇਜਾਜ਼ਤ ਦੀ ਗਲਤੀ"
+	"bs-readers-permission-error": "ਇਜਾਜ਼ਤ ਦੀ ਗਲਤੀ",
+	"bs-readers-header-page": "ਵਰਕਾ"
 }
