Sync I18N from master

--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -42,7 +42,7 @@
 	"bs-readers-flyout-header-revision-date": "Revisiedatum",
 	"bs-readers-flyout-header-read-on": "Gelezen op",
 	"bs-readers-revision-flyout-title": "Lezers per revisie",
-	"revisionreaders": "Lezers per revisie van \"$1\"",
+	"revisionreaders": "Lezers per versie van \"$1\"",
 	"bs-readers-pref-numofreaders-help": "Aantal lezers dat wordt weergegeven op de pagina-informatie in de tools voor kwaliteitsbeheer.",
 	"bs-readers-info-dialog": "Lezers van deze pagina",
 	"bs-readers-header-read-by": "Gelezen door",
